--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </style>
 
 </head>
-<body>
+<body>>
     <h1>The Fate of European Jews</h1>
     <div id="container">
             <div id="graph"></div>
@@ -91,7 +91,12 @@
 
         <section>
             <h3>Introduction: Pre-war Jewish Population by Country</h3>
-            In 1933, approximately 9.5 million Jews lived in Europe, comprising 1.7% of the total European population. This number represented more than 60 percent of the world's Jewish population at that time, estimated at 15.3 million.
+            In 1933, approximately 9.5 million Jews lived in Europe, comprising 1.7% of the total European population. This number represented more than 60 percent of the world's Jewish population at that time, estimated at 15.3 million. Over half of the Jewish population lived in Poland, Romania, and the Soviet Union. Poland alone was home to 3 million Jews, the most of any country in Europe.
+        </section>
+        <section>
+          <h3>Map of Locations of Camps</h3>
+            From 1938 to 1944 an estimated 6 million jews would die at the hands of the Nazi Regime. The Nazis
+
         </section>
 
         <section>
@@ -101,7 +106,7 @@
             that 6 Million Jews died in the Holocaust.
             <br><br>
             Let's begin with the demographics of those who died.
-              </section>
+        </section>
         <section>
             <h3>Deaths by Demographic</h3>
             It's difficult to get a sense of scale for 9.6 million people. It is also difficult to comprehend the path of Jews through the holocaust in relation to the total number of fatalities. This is a graph of the pre-war population of Jews in europe with every ten thousand people represented by a circle. Scholars estimate that 6 Million Jews died in the Holocaust. Let's begin with the demographics of those who died. That leaves about 3 million Jews who surived.
@@ -130,11 +135,6 @@
             <input type="checkbox" name="camps" value="chelmno"> Chelmno
             <input type="checkbox" name="camps" value="ghettos"> Ghettos
           </form>
-
-
-        </section>
-        <section>
-
         </section>
         <section>
           <h3>Deaths by Location -- Concentration Camps, Shooting, and Others</h3>
@@ -150,8 +150,6 @@
             <input type="checkbox" name="camps" value="russian"> Russian Jews Shot in the Soviet Union
             <br><br>
             <input type="checkbox" name="camps" value="german"> German, Austrian, and Czech     Jews shot in the Soviet Union
-            <br><br>
-            <input type="checkbox" name="camps" value="serbia"> Shooting in Serbia
             <br><br>
             <input type="checkbox" name="camps" value="other"> Other
           </form>
@@ -185,7 +183,8 @@ d3.csv("overview_data.csv").then(function(data){
         var dots = [];
 
         for (let i = 0; i < 960; i++) {
-          dots.push(i)
+          dots.push({"key": i, "value": null})
+          console.log(dots[i].key)
         }
 
         console.log(dots);
@@ -193,7 +192,7 @@ d3.csv("overview_data.csv").then(function(data){
     const bar_charts = create_first_barchart(svg, 550, 330, "prewar", data);
     const dot_plot = create_iris_plot(svg, 550, 330, dots);
 
-    const vis_steps = [section_1, section_2, section_3, section_4, section_5]
+    const vis_steps = [section_1, section_2, section_3, section_4, section_5, section_6]
     const gs = d3.graphScroll()
       .container(d3.select("#container"))
       .graph(d3.select("#graph"))
@@ -204,9 +203,20 @@ d3.csv("overview_data.csv").then(function(data){
           vis_steps[i]();
       });
 
+      function clear_boxes(){
+        console.log("clearing boxes")
+        var checkboxes = document.getElementsByTagName('input');
+        for (var i=0; i<checkboxes.length; i++)  {
+          if (checkboxes[i].type == 'checkbox')   {
+              checkboxes[i].checked = false;
+            }
+        }
+      }
+
       function section_1(){
 
         dot_plot.opacity(0);
+        dot_plot.distance(250);
         dot_plot();
 
         svg.transition()
@@ -217,8 +227,16 @@ d3.csv("overview_data.csv").then(function(data){
       }
 
       function section_2(){
+        //Veronica's map code goes here !
+
+
+      }
+
+
+      function section_3(){
 
         dot_plot.opacity(1);
+        dot_plot.distance(50);
         dot_plot();
         dot_plot.color("survived");
 
@@ -226,7 +244,7 @@ d3.csv("overview_data.csv").then(function(data){
         bar_charts();
     }
 
-      function section_3(){
+      function section_4(){
 
         document.getElementById('color_option').addEventListener('change', function(event){
 
@@ -235,15 +253,21 @@ d3.csv("overview_data.csv").then(function(data){
           dot_plot.color(color)
         })
 
+
+        dot_plot.distance(50)
+        dot_plot.add_count("reset");
+        dot_plot();
         svg.transition()
           .attr("height", 400);
 
         bar_charts.opacity(0)
         bar_charts()
 
+        clear_boxes();
+
       }
 
-      function section_4(){
+      function section_5(){
         //reset the colors of the dot_plot
         color = "lightgrey";
         dot_plot.color(color)
@@ -270,17 +294,19 @@ d3.csv("overview_data.csv").then(function(data){
         svg.transition()
           .attr("height", 600);
         dot_plot.size(600);
+        dot_plot.distance(250);
+        dot_plot();
 
         bar_charts.opacity(0)
-        bar_charts()
+        bar_charts();
       }
 
-      function section_5(){
+      function section_6(){
         //iris_plot.opacity(0)
         //iris_plot()
         color = "lightgrey";
         dot_plot.color(color)
-    
+
         let count = 0;
           //get all selected elements from the form
           let selected = [];
@@ -310,7 +336,6 @@ d3.csv("overview_data.csv").then(function(data){
 
 
       }
-
 
 });
 
