--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ursula Alwang -- The Fate of the Jews in Europe, Visualized </title>
+    <title>The Fate of the Jews in Europe, Visualized </title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="functions.js" ></script>
     <script src="graph-scroll.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
     <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
-
 
     <style type="text/css">
             .hidden{
@@ -18,17 +17,50 @@
     body {
         max-width: 900px;
         margin: 0px auto;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: "Trebuchet MS", Helvetica, sans-serif;
+        line-height: 1.5;
     }
 
     h1{
         margin: 50px;
-        background-color: #5970A4;
-        text-decoration-color: #FFFFFF;
     }
 
     h1{
         text-align: center;
+    }
+
+
+    #container{
+        position: relative;
+    }
+
+    #sections{
+        width: 300px;
+        padding-bottom:300px;
+    }
+
+    #sections > section{
+        opacity: .2;
+        margin-bottom: 200px;
+        padding-left: 15px;
+        border-left: 5px solid darkgrey ;
+    }
+
+    #sections > section.graph-scroll-active{
+        opacity: 1;
+        border-left: 6px solid darkgrey ;
+    }
+
+    #graph{
+        margin-left: 20px;
+        width: 500px;
+        position: sticky;
+        top: 20px;
+        float: right;
+    }
+
+    #graph svg{
+        border:solid 5px lightgrey;
     }
 
     #map{
@@ -42,93 +74,49 @@
         list-style-type:none;
     }
 
-
-    #container{
-        position: relative;
-    }
-
-    #sections{
-        width: 300px;
-        padding-bottom:300px;
-
-    }
-
-    #sections > section{
-        opacity: .2;
-        margin-bottom: 200px;
-
-    }
-
-    #sections > section.graph-scroll-active{
-        opacity: 1;
-
-    }
-
-    #graph{
-        margin-left: 20px;
-        width: 500px;
-        position: sticky;
-        top: 20px;
-        float: right;
-    }
-
-    #footer{
-        height:1000px;
-    }
-
-   #tooltip{
-        position:absolute;
-        width:150px;
-        height:auto;
-        padding:10px;
-        background-color: white;
-        border-radius:10px;
-        box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
-        pointer-events: none;
-    }
-
-    #tooltip.hidden{
-        display:none;
+    #tooltip{
+    position:absolute;
+    width:150px;
+    height:auto;
+    padding:10px;
+    background-color: white;
+    border-radius:10px;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+    pointer-events: none;
     }
 
     #tooltip p{
-        margin:0;
-        font-family: sans-serif;
-        font-size:12px;
-    }
-
-    #graph svg{
-        border:solid 1px lightgrey;
+    margin:0;
+    font-family: sans-serif;
+    font-size:12px;
     }
 
   </style>
 
 </head>
-<body bgcolor="#828DA5">
-    <h1>The Fate of European Jews</h1>
+<body>
+
+  <div id= tooltip class="hidden">
+      <p>Name: <span id="camp"></span></p>
+  </div>
+
+    <h1>The Fate of European Jews in the Holocaust</h1>
     <div id="container">
-    <div id="map"></div>
     <div id="graph"></div>
     <div id="sections">
 
-
-
-    <div id= tooltip class="hidden">
-        <p>Name: <span id="camp"></span></p>
-    </div>
-
         <section>
             <h3>Introduction: Pre-war Jewish Population by Country</h3>
-            In 1933, approximately 9.5 million Jews lived in Europe, comprising 1.7% of the total European population. This number represented more than 60 percent of the world's Jewish population at that time, estimated at 15.3 million.
+            In 1933, approximately 9.5 million Jews lived in Europe, comprising 1.7% of the total European population. This number represented more than 60 percent of the world's Jewish population at that time, estimated at 15.3 million. Over half of the Jewish population lived in Poland, Romania, and the Soviet Union. Poland alone was home to 3 million Jews, the most of any country in Europe.
         </section>
-
         <section>
-            <h3>Map</h3>
-            Text.
-            Text.
+          <h3>Map of Locations of Camps</h3>
+            From 1938 to 1944 an estimated 6 million jews would die at the hands of the Nazi Regime. The NazisHowever demographics only tell one part of the story. The next part is where victems died. Though it is commonly believed that most victems died in concentraion camps, almost a third of the people killed died in uncoordinated shootings and gassings around Europe, but mostly in the Soviet Union. Many people also died in the Ghettos due to poor conditions, starvation, disease, and exposure. Insert statstic about Warsaw Ghetto.
 
             <form id="controls">
+              <br><br>
               <input type="checkbox" name="layer" value="point-layer"> Concentration Camps
+              <br><br>
               <input type="checkbox" name="layer" value="contour-layer"> Extermination Camps
             </form>
 
@@ -141,7 +129,7 @@
             that 6 Million Jews died in the Holocaust.
             <br><br>
             Let's begin with the demographics of those who died.
-              </section>
+        </section>
         <section>
             <h3>Deaths by Demographic</h3>
             It's difficult to get a sense of scale for 9.6 million people. It is also difficult to comprehend the path of Jews through the holocaust in relation to the total number of fatalities. This is a graph of the pre-war population of Jews in europe with every ten thousand people represented by a circle. Scholars estimate that 6 Million Jews died in the Holocaust. Let's begin with the demographics of those who died. That leaves about 3 million Jews who surived.
@@ -161,20 +149,22 @@
         <section>
           <h3>Deaths by Location -- Extermination Camps and Ghettos</h3>
           However demographics only tell one part of the story. The next part is where victems died. Though it is commonly believed that most victems died in concentraion camps, almost a third of the people killed died in uncoordinated shootings and gassings around Europe, but mostly in the Soviet Union. Many people also died in the Ghettos due to poor conditions, starvation, disease, and exposure. Insert statstic about Warsaw Ghetto.
-          <br><br>
+          <br>
           <form id="camp_option">
-            <input type="checkbox" name="camps" value="auschwitz"> Auschwitz complex (including Birkenau, Monowitz, and subcamps)
-            <input type="checkbox" name="camps" value="treblinka"> Trebkinka 2
-            <input type="checkbox" name="camps" value="belzec"> Belzec
-            <input type="checkbox" name="camps" value="sobibor"> Sobibor
-            <input type="checkbox" name="camps" value="chelmno"> Chelmno
-            <input type="checkbox" name="camps" value="ghettos"> Ghettos
+            <input type="checkbox" name="camps" value="Auschwitz"> Auschwitz Complex
+            <br>
+            <input type="checkbox" name="camps" value="Treblinka"> Trebkinka 2
+            <br>
+            <input type="checkbox" name="camps" value="Belzec"> Belzec
+            <br>
+            <input type="checkbox" name="camps" value="Sobibor"> Sobibor
+            <br>
+            <input type="checkbox" name="camps" value="Chelmno"> Chelmno
+            <br>
+            <input type="checkbox" name="camps" value="Ghettos"> Ghettos
+            <br>
+            <input type="checkbox" name="camps" value="reset"> Reset
           </form>
-
-
-        </section>
-        <section>
-
         </section>
         <section>
           <h3>Deaths by Location -- Concentration Camps, Shooting, and Others</h3>
@@ -182,46 +172,49 @@
           <br><br>
           <form id="other_option">
             <input type="checkbox" name="camps" value="western"> Shot in Western Poland
-            <br><br>
-            <input type="checkbox" name="camps" value="central"> Shot in Central Poland
-            <br><br>
+            <br>
             <input type="checkbox" name="camps" value="concentration"> Concentration Camps
-            <br><br>
+            <br>
             <input type="checkbox" name="camps" value="russian"> Russian Jews Shot in the Soviet Union
-            <br><br>
+            <br>
             <input type="checkbox" name="camps" value="german"> German, Austrian, and Czech     Jews shot in the Soviet Union
-            <br><br>
-            <input type="checkbox" name="camps" value="serbia"> Shooting in Serbia
-            <br><br>
+            <br>
             <input type="checkbox" name="camps" value="other"> Other
+            <br>
+            <input type="checkbox" name="camps" value="reset"> Reset
           </form>
+        </section>
+        <section>
+          <h3>Conclusion</h3>
 
+            Sources:
+
+            Thank you:
+
+            Dedication:
 
         </section>
-
     </div>
 
 </div>
 
-<div id="footer"></div>
+
 
 <script type="text/javascript">
 
-const width = 575, height = 725;
-
+const width = 575, height = 727
 Promise.all([
     d3.json("europe-topo.json"),
     d3.csv("camps.csv"),
     d3.csv("extermination.csv"),
     d3.csv("overview_data.csv")
 ]).then(function(data){
-  const map_data = data[0];
-  const camps_data = data[1];
-  const extermination_data = data[2];
-  const overview_data = data[3];
+    const map_data = data[0];
+    const camps_data = data[1];
+    const extermination_data = data[2];
+    const overview_data = data[3];
 
     const color_scale = d3.scaleOrdinal(d3.schemeCategory10);
-
     const svg = d3.select("#graph").append("svg")
         .attr("width", 600)
         .attr("height", 400);
@@ -230,7 +223,8 @@ Promise.all([
         var dots = [];
 
         for (let i = 0; i < 960; i++) {
-          dots.push(i)
+          dots.push({"key": i, "value": null})
+          //console.log(dots[i].key)
         }
 
         console.log(dots);
@@ -239,8 +233,7 @@ Promise.all([
     const dot_plot = create_iris_plot(svg, 550, 330, dots);
     const map_plot = europe_map(svg, 575, 725, map_data, camps_data, extermination_data);
 
-    const vis_steps = [section_1, section_2, section_3, section_4, section_5, section_6]
-
+    const vis_steps = [section_1, section_2, section_3, section_4, section_5, section_6, section_7]
     const gs = d3.graphScroll()
       .container(d3.select("#container"))
       .graph(d3.select("#graph"))
@@ -251,10 +244,22 @@ Promise.all([
           vis_steps[i]();
       });
 
+      //a function to clear the checkboxes in sections 5/6
+      function clear_boxes(){
+        console.log("clearing boxes")
+        var checkboxes = document.getElementsByTagName('input');
+        for (var i=0; i<checkboxes.length; i++)  {
+          if (checkboxes[i].type == 'checkbox')   {
+              checkboxes[i].checked = false;
+            }
+        }
+      }
 
+      //bar chart
       function section_1(){
 
         dot_plot.opacity(0);
+        dot_plot.distance(500);
         dot_plot();
 
         svg.transition()
@@ -263,47 +268,51 @@ Promise.all([
         bar_charts.opacity(1)
         bar_charts();
 
-        console.log(dot_plot);
-
-        map_plot.opacity(0)
+        map_plot.opacity(.00000001)
         map_plot();
 
       }
-
+      //Geographic Map
       function section_2(){
 
         dot_plot.opacity(0);
+        dot_plot.distance(500);
         dot_plot();
 
         bar_charts.opacity(0)
         bar_charts();
 
         svg.transition()
-          .attr("height", 500);
+          .attr("height", 650);
 
-        europe.opacity(1)
-        europe();
+        map_plot.opacity(1)
+        map_plot();
 
-    }
 
+
+      }
+
+      //dot plot -- Intro
       function section_3(){
 
         dot_plot.opacity(1);
+        dot_plot.distance(50);
         dot_plot();
-        dot_plot.color("survived");
+
+        svg.transition()
+          .attr("height", 400);
 
         bar_charts.opacity(0);
         bar_charts();
 
-        svg.transition()
-          .attr("height", 600);
-
-        europe.opacity(0)
-        europe();
+        //bring in the new Map
+        map_plot.opacity(.0000000001);
+        map_plot();
     }
-
+      //dot plot -- By Demographic
       function section_4(){
 
+        //get color option from menu
         document.getElementById('color_option').addEventListener('change', function(event){
 
           let color = document.getElementById("color_option").value;
@@ -314,29 +323,30 @@ Promise.all([
         svg.transition()
           .attr("height", 400);
 
+        dot_plot.add_count("reset");
+        dot_plot.distance(50);
+        dot_plot();
+
         bar_charts.opacity(0)
         bar_charts()
 
-        svg.transition()
-          .attr("height", 600);
-
-        europe.opacity(0)
-        europe();
-
+        clear_boxes();
       }
 
+      //dot plot -- by Camps & Ghettos
       function section_5(){
-        //reset the colors of the dot_plot
 
-        color = "lightgrey";
-        dot_plot.color(color)
-        let count = 0;
+        let count = 0; //holds the number of circles to move down
           //get all selected elements from the form
           let selected = [];
           var form = document.getElementById('camp_option');
           for(var i=0; i < form.length; i++){
-              let current = form[i]
+            let current = form[i]
               form[i].onclick = function(){
+
+                if (current.value == "reset"){
+                  clear_boxes();
+                }
 
                 if (selected.includes(name)){
 
@@ -351,27 +361,21 @@ Promise.all([
           }
 
         svg.transition()
-          .attr("height", 600);
-        dot_plot.size(600);
+          .attr("height", 550);
+        dot_plot.size(550);
+        //dot_plot.color("darkgrey");
+        dot_plot.distance(200);
+        dot_plot();
 
         bar_charts.opacity(0)
-        bar_charts()
-
-        svg.transition()
-          .attr("height", 600);
-
-        europe.opacity(0)
-        europe();
+        bar_charts();
 
       }
-
+      //dot plot -- by Shooting and Other
       function section_6(){
-        //iris_plot.opacity(0)
-        //iris_plot()
-        color = "lightgrey";
-        dot_plot.color(color)
 
-        let count = 0;
+        let count = 0; //holds the number of circles to move down
+
           //get all selected elements from the form
           let selected = [];
           var form = document.getElementById('other_option');
@@ -379,6 +383,10 @@ Promise.all([
               let current = form[i]
               form[i].onclick = function(){
 
+                if (current.value == "reset"){
+                  clear_boxes();
+                }
+
                 if (selected.includes(name)){
 
                   selected.filter((d)=> d == current.value)
@@ -393,20 +401,23 @@ Promise.all([
 
 
         svg.transition()
-          .attr("height", 600);
+          .attr("height", 550);
 
         bar_charts.opacity(0)
         bar_charts()
 
-        svg.transition()
-          .attr("height", 600);
-
-        europe.opacity(0)
-        europe();
-
 
       }
+      //Conclusion
+      function section_7(){
 
+        svg.transition()
+          .attr("height", 400);
+
+        dot_plot.add_count("reset");
+        dot_plot.distance(50);
+        dot_plot();
+      }
 
 });
 
